refactored lvl2 and added lvl3 & lvl4

--- a/src/app/level2/level2.component.html
+++ b/src/app/level2/level2.component.html
@@ -51,4 +51,4 @@
 
 <h2>The winner is {{getWinnerIndex()}}</h2>
 
-<button (click)="onRestart()">Restart</button>
+<button (click)="restart()">Restart</button>
