--- a/src/app/level3/level3.component.html
+++ b/src/app/level3/level3.component.html
@@ -1,4 +1,29 @@
-<h1>Level 3</h1>
+<table class="connect-four-board">
+  <tbody>
+    <tr>
+      <td
+        class="indicator"
+        *ngFor="let styles of [0,1,2,3,4,5,6]; let col = index"
+      >
+        <app-column-indicator
+          [columnIndex]="col"
+          (drop)="drop($event)"
+          [playerIndex]="currentPlayerIndex"
+        ></app-column-indicator>
+      </td>
+    </tr>
+
+    <tr *ngFor="let rows of getStyles()">
+      <td *ngFor="let col of rows">
+        <div class="coin" [class]="col"></div>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+<h2 [hidden]="getWinnerIndex() === 0">The winner is {{ getWinnerIndex() }}</h2>
+
+<button (click)="restart()">Restart</button>
 
 <!--
   TODO: Enhance solution from level 2 by using *ngFor
